Added Trivy workflow Updated dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ classifiers = [
     "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
     "Development Status :: 5 - Production/Stable",
     "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
     "Operating System :: OS Independent",
@@ -24,7 +25,7 @@ classifiers = [
 keywords = ["IoT",]
 dependencies = [
     "typing-extensions; python_version <'3.11'",
-    "aiomqtt ~= 1.1.0",
+    "aiomqtt ~= 1.2.0",
     "asyncpg ~= 0.28.0",
     "python-decouple ~= 3.8",
 ]
