--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -2,7 +2,7 @@ name: Trivy vulnerability test
 
 on:
   workflow_run:
-    workflows: [ "Docker publish" ]
+    workflows: [ "ci" ]
     types:
       - completed
   schedule:
