Refactored descriptor to be more clear

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -129,7 +129,7 @@ jobs:
         with:
           path: artifacts
 
-      - name: Merge files
+      - name: Merge artifacts
         run: |
           mkdir /tmp/digests
           mv artifacts/*/* /tmp/digests
