--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -127,13 +127,9 @@ jobs:
       - name: Download digests
         uses: actions/download-artifact@v4
         with:
-          path: artifacts
-
-      - name: Merge artifacts
-        run: |
-          mkdir /tmp/digests
-          mv artifacts/*/* /tmp/digests
-        shell: bash
+          path: /tmp/digests
+          pattern: digest-*
+          merge-multiple: true
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
