--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,29 +2,32 @@
 # See https://pre-commit.com/hooks.html for more hooks
 repos:
 -   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.4.0
+    rev: v4.5.0
     hooks:
+    -   id: check-executables-have-shebangs
         # Check for invalid files
     -   id: check-toml
         # Check Python files
+    -   id: end-of-file-fixer
     -   id: fix-encoding-pragma
         args: [--remove]
-    -   id: end-of-file-fixer
     -   id: mixed-line-ending
-        args: [--fix=lf]
+        args: [ --fix=lf ]
     -   id: check-executables-have-shebangs
+    -   id: requirements-txt-fixer
+    -   id: trailing-whitespace
+        args: [ --markdown-linebreak-ext=md ]
 -   repo: https://github.com/psf/black
-    rev: 23.9.1
+    rev: 24.4.2
     hooks:
     -   id: black
-        args: ['.']
 -   repo: https://github.com/asottile/blacken-docs
     rev: 1.16.0
     hooks:
     -   id: blacken-docs
-        args: [--line-length=120]
+        args: [ --line-length=120 ]
 -   repo: https://github.com/PyCQA/isort
-    rev: 5.12.0
+    rev: 5.13.2
     hooks:
     -   id: isort
 -   repo: local
@@ -33,11 +36,11 @@ repos:
         name: pylint
         entry: pylint
         language: system
-        types: [python]
+        types: [ python ]
         require_serial: true
-        args: [--generated-members=pipe.*]
+        args: [ --generated-members=pipe.* ]
 -   repo: https://github.com/pre-commit/mirrors-mypy
-    rev: 'v1.5.1'
+    rev: 'v1.10.0'
     hooks:
     -   id: mypy
         additional_dependencies: [types-simplejson]
