--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ dependencies = [
     "aiomqtt ~= 2.3.0",
     "asyncpg ~= 0.30.0",
     "python-decouple ~= 3.8",
+    "pydantic ~= 2.10.5",
 ]
 dynamic = ["version"]
 
