Fix flat package style

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -68,5 +68,8 @@ requires = [
 ]
 build-backend = "setuptools.build_meta"
 
+[tool.setuptools]
+py-modules = []
+
 [tool.setuptools.dynamic]
 version = {attr = "_version.__version__"}
