--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ dependencies = [
     "aiomqtt ~= 2.3.0",
     "asyncpg ~= 0.30.0",
     "python-decouple ~= 3.8",
+    "pydantic ~= 2.10.5",
 ]
 dynamic = ["version"]
 
@@ -66,6 +67,9 @@ requires = [
     "setuptools>=61.0",
 ]
 build-backend = "setuptools.build_meta"
+
+[tool.setuptools]
+py-modules = []
 
 [tool.setuptools.dynamic]
 version = {attr = "_version.__version__"}
